enable  AI chat

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,9 @@ MONGO_URI=mongodb://mongo:27017/simulator
 ACTIVE_DATASET=default
 SERVER_PORT=8080
 AUTH_ENABLED=false
+
+# AI Assistant Configuration
+AI_ENABLED=false
+AI_PROVIDER=openai
+OPENAI_API_KEY=your-openai-api-key-here
+AI_MODEL=gpt-4o-mini
