--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -37,3 +37,11 @@ simulator:
   wiremock:
     port: 9999
     admin-port: 9998
+  ai:
+    enabled: ${AI_ENABLED:false}
+    provider: ${AI_PROVIDER:openai}
+    api-key: ${OPENAI_API_KEY:}
+    model: ${AI_MODEL:gpt-4o-mini}
+    max-tokens: 2000
+    temperature: 0.7
+    max-context-mappings: 10
